2008-06-29  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-upgrade.py.in (UpgraderTestCase.test03_noNetwork):
	Wrote method.
	(UpgraderTestCase.test01_CheckClientVersionFailed1): Added check
	for output from checkClientVersion()

	* pokernetwork/upgrade.py (Upgrader.message): Wrote method; as
	support for Upgrader.error

	* pokernetwork/upgrade.py (Upgrader.error): Wrote method; it was missing.

	* tests/test-upgrade.py.in
	(PokerClientUpgradeCheckClientVersion.test01_CheckClientVersionRemote):
	Added check for message() output from CheckClientVersion.__init__
	(PokerClientUpgradeFailedTestCase.test01_CheckClientVersionFailedAndNeedUpgrade):
	Added output checks.
	(DryrunUpgradeMockUp): Created mockup.
	(PokerClientDryrunUpgrade): Created test class.
	(PokerClientDryrunUpgrade.setUp): Wrote method.
	(PokerClientDryrunUpgrade.tearDown): Wrote method.
	(PokerClientDryrunUpgrade.test01_dryRunLineTest): Wrote method.
	(GetPatchMockUp): Created mock up class.
	(GetPatchUpgradeTest): Created test set.
	(GetPatchUpgradeTest.setUp): Wrote method.
	(GetPatchUpgradeTest.tearDown): Wrote method.
	(GetPatchUpgradeTest.test01_getPatchLine): Wrote method.

	* tests/testmessages.py: Added import of upgrade to put
	upgrade.CheckClientVersion on the messages list.

	* tests/test-upgrade.py.in (UpgraderMockup.message): Wrote method.
	(PokerSettingsMockupSource.headerGetIn): set verbose return to 6
	(PokerSettingsMockup.headerGetInt): Set verbose to return 6.

	* tests/test-pokerclient.py.in (PokerClientTestCase.setUpClient):
	Added test for delays output from PokerClientFactory.__init__
	(PokerClientTestCase.test23_checkTranslateToFileName): Wrote method.
	(PokerClientTestCase.test24_upgradeReady): Wrote method.
	(PokerClientTestCase.updatePot): Wrote method.
	(PokerClientTestCase.test25_updatePotChipsNoSidePots): Wrote method.
	(PokerClientTestCase.updatePot): Wrote method.
	(PokerClientTestCase.printUserInfo): Added check for
	handleUserInfo output.